--- a/Modulo1/Pasta4/package.json
+++ b/Modulo1/Pasta4/package.json
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/mustache-express": "^1.2.2",
     "@types/express": "^4.17.13",
+    "@types/mustache-express": "^1.2.2",
     "@types/node": "^17.0.34",
     "@types/validator": "^13.7.2"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mustache-express": "^1.3.2",
     "validator": "^13.7.0"
